# cookiecutter-flask-webapp

./: .gitignore  README.md  cookiecutter.json  tox.ini
.github/workflows/: tests.yml
tests/: test_basic.py
{{ cookiecutter.slug }}/: .env  .mergify.yml  .pre-commit-config.yaml  .readthedocs.yml  README.md  Vagrantfile  pyproject.toml  tox.ini  {{ cookiecutter.slug }}.cfg.default
{{ cookiecutter.slug }}/.github/workflows/: dependabot-approve.yml  pre-commit-autoupdate.yml  tests.yml
{{ cookiecutter.slug }}/.s2i/: environment
{{ cookiecutter.slug }}/deploy/: {{ cookiecutter.slug }}.wsgi
{{ cookiecutter.slug }}/devel/ansible/roles/dev/files/: bashrc  {{ cookiecutter.slug }}.service
{{ cookiecutter.slug }}/devel/ansible/roles/dev/tasks/: main.yml  rabbitmq.yml
{{ cookiecutter.slug }}/docs/: conf.py  contributing.rst  index.rst  sysadmin.rst
{{ cookiecutter.slug }}/news/: _template.rst
{{ cookiecutter.slug }}/tests/: app_config.py  conftest.py  test_healthz.py  test_root.py
{{ cookiecutter.slug }}/{{ cookiecutter.pkg_name }}/: __init__.py  app.py  database.py  defaults.py  l10n.py
{{ cookiecutter.slug }}/{{ cookiecutter.pkg_name }}/migrations/: alembic.ini  env.py  script.py.mako
{{ cookiecutter.slug }}/{{ cookiecutter.pkg_name }}/migrations/versions/: initial.py
{{ cookiecutter.slug }}/{{ cookiecutter.pkg_name }}/models/: __init__.py
{{ cookiecutter.slug }}/{{ cookiecutter.pkg_name }}/templates/: index.html  main.html  profile.html
{{ cookiecutter.slug }}/{{ cookiecutter.pkg_name }}/utils/: healthz.py
{{ cookiecutter.slug }}/{{ cookiecutter.pkg_name }}/views/: __init__.py  root.py
